--- a/bench.toml
+++ b/bench.toml
@@ -3,9 +3,10 @@ clusters = "127.0.0.1:7001,127.0.0.1:7002"
 # password = "secret"
 
 [bench]
-requests = 10000
-# keyspace = 10000
+requests = 100000  # number of requests for each commands
+keyspace = 10000   # max number of key for `__rand_int__`
 tests = "set __rand_int__ __rand_int__"
 
 [report]
 interval_sec = 3
+verbose = false
