--- a/bench.toml
+++ b/bench.toml
@@ -5,10 +5,12 @@ clusters = "127.0.0.1:7001,127.0.0.1:7002"
 [bench]
 requests = 100000  # number of requests for each commands
 keyspace = 10000   # max number of key for `__rand_int__`
-tests = "set __rand_int__ __rand_int__"
-qps = 5000
-# debug = true
+tests    = "set __rand_int__ __rand_int__"
+after    = "set result/last __result__"
+# after    = "rpush results __result__"
+qps      = 5000
+# debug    = true
 
 [report]
-interval_sec = 3
+interval_sec = 1
 verbose = true
