--- a/shard.yml
+++ b/shard.yml
@@ -4,13 +4,13 @@ version: 0.3.6
 dependencies:
   redis-cluster:
     github: maiha/redis-cluster.cr
-    version: 0.6.8
+    version: ">= 0.8.0"
   toml-config:
     github: maiha/toml-config.cr
-    version: 0.2.0
+    version: ">= 0.3.2"
   opts:
     github: maiha/opts.cr
-    version: 0.1.1
+    version: ">= 0.6.0"
     
 authors:
   - maiha <maiha@wota.jp>
